# jetank_description

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: gz_bridge.yaml  jetank_controllers.yaml  jetank_launch.rviz
launch/: jetank_controllers.launch.py  jetank_depth.launch.py  jetank_description.launch.py  jetank_gazebo.launch.py  jetank_rtabmap.launch.py  jetank_rviz.launch.py
launch/__pycache__/: jetank_controllers.launch.d.er
meshes/: ANTENNA_L.stl  ANTENNA_R.stl  ARM_LOWER.stl  ARM_MIDDLE.stl  ARM_UPPER.stl  BEARING.stl  CAMERA.stl  CAM_HOLDER.stl  CATERPILLAR_TRACKS_L.stl  DRIVER_WHEEL_L.stl  DRIVER_WHEEL_R.stl  FREE_WHEEL_L.stl  FREE_WHEEL_R.stl  GRIPPER_BASE.stl  GRIPPER_L1.stl  GRIPPER_L2.stl  GRIPPER_R1.stl  GRIPPER_R2.stl  SERVO_LOWER.stl  SERVO_UPPER.stl  base_link.stl
scripts/: depth.py  depth_sync_repub.py  teleop.py
urdf/: jetank.urdf  jetank_joints.xacro  jetank_links.xacro  jetank_main.xacro  jetank_sensors.xacro  original.xacro
worlds/: ground_plane.world
