<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetank_description</name>
  <version>0.0.0</version>
  <description>URDF and XACRO description for the Jetank robot</description>
  <maintainer email="ai_team_user@todo.todo">ai_team_user</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Control Dependencies -->
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>velocity_controllers</depend>
  <depend>diff_drive_controller</depend>

  <!-- Gazebo / Ignition Dependencies -->
  <depend>ign_ros2_control</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- ROS 2 Launch System -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2launch</depend>

  <!-- Description-related tools -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- General ROS Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2controlcli</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
</package>
